# loggy

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md
analyze/: GraphView
detection/: virustotalhash.txt
include/: antiDebug.h  linuxLogger.h  macOsLogger.h  obfuscator.h  scheduler.h  windowsLogger.h
src/: loggy.cpp
src/Linux/: linuxLogger.cpp
src/Windows/: windowsLogger.cpp
src/macOS/: macOsLogger.cpp
src/utils/: antiDebug.cpp  scheduler.cpp
